<resources>
    <string name="app_name">IntonationEnlish</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="registration">registration</string>
    <string name="thu_vien">Thu Vien</string>
    <string name="tach_video">Tach video</string>
    <string name="sub_title">sub title</string>
    <string name="play">Play</string>
    <string name="practice">practice</string>
    <string name="KetQua">kết quả</string>
    <string name="path">path</string>
    <string name="browse">browse</string>
    <string name="button">Play</string>
    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

</resources>
