<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingVideoActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lines="8"
        android:text="@string/sub_title"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/videoView"
        tools:ignore="MissingConstraints,TextViewEdits"
        tools:layout_editor_absoluteX="74dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_cat_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tach_video"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_thu_vien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu_vien"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>